# cmake-project-with-macros

./: .gitignore  CMakeLists.txt  README.md  cmake-project-with-macros.cpp  cmake-project-with-macros.h
